Get view working - view sims list view

--- a/The Sims 2 SimsExplorer/Views/Home/Index.cshtml
+++ b/The Sims 2 SimsExplorer/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
 
 <script>
     "use strict";
-    async function AJAXSubmit (oFormElement) {
+    function AJAXSubmit (oFormElement) {
       const formData = new FormData(oFormElement);
       try {
         const response = await fetch(oFormElement.action, {
