--- a/The Sims 2 SimsExplorer/wwwroot/css/site.css
+++ b/The Sims 2 SimsExplorer/wwwroot/css/site.css
@@ -28,6 +28,10 @@ a {
     border : 2px solid black;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 table.solid-border {
     border-collapse : collapse;
 }
