--- a/The Sims 2 SimsExplorer/Views/Home/Sim.cshtml
+++ b/The Sims 2 SimsExplorer/Views/Home/Sim.cshtml
@@ -5,6 +5,12 @@
 
 <a href="/Home/SimList">Back</a>
 
+<h1>@sim.FirstName @sim.LastName</h1>
+
+@if (!String.IsNullOrEmpty(sim.Image))
+{
+    <img src="data:image/png;base64, @sim.Image" />
+}
 
 <table>
     <tr><td>Hood</td><td>@sim.Hood</td></tr>
@@ -18,9 +24,9 @@
     <tr><td>HouseNumber</td><td>@sim.HouseNumber</td></tr>
     <tr><td>AvailableCharacterData</td><td>@sim.AvailableCharacterData</td></tr>
     <tr><td>Unlinked</td><td>@sim.Unlinked</td></tr>
-    <tr><td>ParentA</td><td>@sim.ParentA</td></tr>
-    <tr><td>ParentB</td><td>@sim.ParentB</td></tr>
-    <tr><td>Spouse</td><td>@sim.Spouse</td></tr>
+    <tr><td>ParentA</td><td>@sim.ParentAName</td></tr>
+    <tr><td>ParentB</td><td>@sim.ParentBName</td></tr>
+    <tr><td>Spouse</td><td>@sim.SpouseName</td></tr>
     <tr><td>BodyType</td><td>@sim.BodyType</td></tr>
     <tr><td>NPCType</td><td>@sim.NPCType</td></tr>
     <tr><td>SchoolType</td><td>@sim.SchoolType</td></tr>
@@ -91,3 +97,5 @@
     <tr><td>HobbyPredestined</td><td>@sim.HobbyPredestined</td></tr>
     <tr><td>LifetimeWant</td><td>@sim.LifetimeWant</td></tr>
 </table>
+
+
