--- a/The Sims 2 SimsExplorer/Views/Home/Sim.cshtml
+++ b/The Sims 2 SimsExplorer/Views/Home/Sim.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@section styles {
+    <link rel="stylesheet" href="~/css/sim.css" />
+}
+@{
     ViewData["Title"] = "Sim";
     var sim = ViewBag.Sim;
 }
@@ -15,7 +18,7 @@
 <table>
     <tr><td>Hood</td><td>@sim.Hood</td></tr>
     <tr><td>HoodName</td><td>@sim.HoodName</td></tr>
-    <tr><td>NID</td><td>@sim.NID</td></tr>
+    <tr><td>NID</td><td>@sim.SimId</td></tr>
     <tr><td>FirstName</td><td><span class="bold">@sim.FirstName</span></td></tr>
     <tr><td>LastName</td><td><span class="bold">@sim.LastName</span></td></tr>
     <tr><td>SimDescription</td><td>@sim.SimDescription</td></tr>
@@ -24,9 +27,9 @@
     <tr><td>HouseNumber</td><td>@sim.HouseNumber</td></tr>
     <tr><td>AvailableCharacterData</td><td>@sim.AvailableCharacterData</td></tr>
     <tr><td>Unlinked</td><td>@sim.Unlinked</td></tr>
-    <tr><td>ParentA</td><td>@sim.ParentAName</td></tr>
-    <tr><td>ParentB</td><td>@sim.ParentBName</td></tr>
-    <tr><td>Spouse</td><td>@sim.SpouseName</td></tr>
+    <tr><td>ParentA</td><td>@sim.ParentA.FullName</td></tr>
+    <tr><td>ParentB</td><td>@sim.ParentB.FullName</td></tr>
+    <tr><td>Spouse</td><td>@sim.Spouse.FullName</td></tr>
     <tr><td>BodyType</td><td>@sim.BodyType</td></tr>
     <tr><td>NPCType</td><td>@sim.NPCType</td></tr>
     <tr><td>SchoolType</td><td>@sim.SchoolType</td></tr>
@@ -97,5 +100,137 @@
     <tr><td>HobbyPredestined</td><td>@sim.HobbyPredestined</td></tr>
     <tr><td>LifetimeWant</td><td>@sim.LifetimeWant</td></tr>
 </table>
+
+<form id="form1">
+
+    <div class="tree" id="FamilyTreeDiv">
+
+        <ul>
+
+            <li>
+                <div>
+                    <span class="female">
+                        @sim.FullName
+                    </span><span class="spacer"></span><span class="male">
+                        Jim Snow
+                        1633 - 1697
+                    </span>
+                </div>
+
+
+                <ul>
+
+                    <li>
+
+                        <div>
+                            <span class="male">
+                                Sam Snow
+                                1631 - 1695
+                            </span><span class="spacer"></span><span class="female">
+                                Lily Sight
+                                1633 - 1697
+                            </span>
+                        </div>
+
+
+                        <ul>
+
+                            <li>
+                                <div>
+                                    <span class="male">
+                                        Ralf Snow
+                                        1651 -
+                                    </span>
+                                </div>
+                            </li>
+
+
+                            <li>
+                                <div>
+                                    <span class="female">
+                                        Brie Snow
+                                        1653 -
+                                    </span>
+                                </div>
+                            </li>
+
+                        </ul>
+
+                    </li>
+
+
+                    <li>
+
+                        <div>
+                            <span class="male">
+                                Jim Snow
+                                1633 - 1697
+                            </span><span class="spacer"></span><span class="female">
+                                Zoe Blue
+                                1633 - 1697
+                            </span>
+                        </div>
+
+
+                        <ul>
+
+                            <li>
+                                <div>
+                                    <span class="male">
+                                        Ralf Snow
+                                        1651 -
+                                    </span><span class="spacer"></span><span class="female">
+                                        Sally Bern
+                                        1653 -
+                                    </span>
+                                </div>
+
+
+                                <ul>
+
+                                    <li>
+                                        <div>
+                                            <span class="female">
+                                                Magna Snow
+                                                1679 -
+                                            </span>
+                                        </div>
+                                    </li>
+
+                                </ul>
+                            </li>
+
+
+                            <li>
+                                <div>
+                                    <span class="female">
+                                        Brie Snow
+                                        1653 -
+                                    </span>
+                                </div>
+                            </li>
+
+                        </ul>
+
+                    </li>
+
+
+                    <li>
+                        <div>
+                            <span class="male">
+                                John Snow
+                                1635 - 1699
+                            </span>
+                        </div>
+                    </li>
+
+                </ul>
+            </li>
+
+        </ul>
+
+    </div>
+
+</form>
 
 
