margin familytree, or bigger on index page

--- a/The Sims 2 SimsExplorer/Views/Home/Index.cshtml
+++ b/The Sims 2 SimsExplorer/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
     </div>
 </form>
 
-<p>OR:</p>
+<h2 class="font-weight-bold">OR:</h2>
 <p>Click <a href="/Home/ExamplePlayFile">here</a> to start with a sample SimPE file. So you can explore the capabilities of this web application.</p>
 
 
