improve margins and padding sim page

--- a/The Sims 2 SimsExplorer/Views/Home/SimList.cshtml
+++ b/The Sims 2 SimsExplorer/Views/Home/SimList.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<p>Sims: </p>
+<h1>Your Sims</h1>
 <table class="table table-bordered table-hover table-sm">
     <thead class="thead-light">
         <tr>
